--- a/.github/workflows/scheduler.yaml
+++ b/.github/workflows/scheduler.yaml
@@ -1,9 +1,7 @@
 name: scheduler
 on:
-  push:
-    branches: [main]
-#  schedule:
-#    - cron:  '0 0 * * *'
+  schedule:
+    - cron:  '0 0 * * *'
 jobs:
   update:
     runs-on: ubuntu-latest
